--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <style type="text/css">
+  <style rel="stylesheet" type="text/css">
     .select{
       width:300px;
       margin-bottom: 30px;
@@ -11,6 +11,9 @@
     } 
     .flex-row{
       display: flex;
+    }
+    .flex-right{
+      margin-left: auto;
     }
   </style>
 </head>
